--- a/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
@@ -38,12 +38,19 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4 col-lg-4 form-group">
+          <label>Export To PDF</label>
+          <div *ngIf="schedule.IsExportToPDF">Yes </div>
+          <div *ngIf="!schedule.IsExportToPDF">No </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
       <button class="btn-footer-fill mr-2" id="btnSave" (click)="navigateToScheduleEdit()"
-              *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))">Update</button>
+              *ngIf="schedule.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))">Update</button>
       <button class="btn-footer-fill-delete bg-danger mr-2" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Delete' }))"
               id="btnDelete" (click)="deleteSchedule()">Delete</button>
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
