--- a/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
@@ -11,40 +11,41 @@
       <div class="d-flex justify-content-center mb-4">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
       <div class="widget-area-grid padding-0">
-        <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
 
           <!-- Position Column -->
           <ng-container matColumnDef="name">
-            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let element">{{element.Schedule.Name}}</td>
           </ng-container>
-
-          <!-- Name Column -->
           <ng-container matColumnDef="template">
             <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Defination </th>
-            <td mat-cell *matCellDef="let element"> {{element.template}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.Schedule.Statement.Name}} </td>
           </ng-container>
 
           <!-- Weight Column -->
           <ng-container matColumnDef="startDate">
-            <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.StartDate  | date:"dd/MM/yyyy"}}</td>
           </ng-container>
 
           <!-- Symbol Column -->
           <ng-container matColumnDef="endDate">
-            <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
+            <td mat-cell *matCellDef="let element">
+              <span *ngIf='element.EndDate!="0001-01-01T00:00:00"'> {{element.EndDate  | date:"dd/MM/yyyy"}}</span>
+              <span *ngIf='element.EndDate=="0001-01-01T00:00:00"'> - </span>
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="DayOfMonth">
-            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Day of Month </th>
-            <td mat-cell *matCellDef="let element"> {{element.DayOfMonth}} </td>
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Day of Month </th>
+            <td mat-cell *matCellDef="let element"> {{element.Schedule.DayOfMonth}} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
@@ -61,8 +62,8 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
       </div>
-      </div>
     </div>
+  </div>
   <!--desktop view end-->
 
   <div class="card border-0 mt-4 mb-3 bg-transparent">
@@ -71,61 +72,72 @@
     </div>
   </div>
 
-  <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
-    <div class="filter-head">
-      <label class="m-0">Apply Filter</label>
-    </div>
-    <div class="filter-body-left d-flex flex-column stylescrollbar">
-      <div class="form-group">
-        <label>Name</label>
-        <input type="text" class="form-control">
+  <form [formGroup]="ScheduleFilterForm">
+    <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
+      <div class="filter-head">
+        <label class="m-0">Apply Filter</label>
       </div>
-      <div class="form-group">
-        <label>Statement Defination</label>
-        <input type="text" class="form-control">
-      </div>
-      <div class="form-group">
-        <label>Start Date</label>
-        <div class="position-relative">
-          <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filtershiftfromdate">
-          <span [owlDateTimeTrigger]="dt" class="datetime-icon">
-            <i class="fa fa-calendar"></i>
-          </span>
-          <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
+      <div class="filter-body-left d-flex flex-column stylescrollbar">
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" class="form-control" formControlName="filterDisplayName">
+        </div>
+        <div class="form-group">
+          <label>Statement Defination</label>
+          <input type="text" class="form-control" formControlName="filterStatementDefiniton">
+        </div>
+        <div class="form-group">
+          <label>Start Date</label>
+          <div class="position-relative">
+            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterStartDate"
+                   placeholder="Please select start date" readonly (ngModelChange)="onFilterDateChange($event)">
+            <span [owlDateTimeTrigger]="dt" class="datetime-icon">
+              <i class="fa fa-calendar"></i>
+            </span>
+            <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <div class="text-danger" *ngIf="filterFromDateError">
+            {{filterFromDateErrorMessage}}
+          </div>
+        </div>
+        <div class="form-group">
+          <label>End Date</label>
+          <div class="position-relative">
+            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterEndDate"
+                   placeholder="Please select end date" readonly (ngModelChange)="onFilterDateChange($event)">
+            <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
+              <i class="fa fa-calendar"></i>
+            </span>
+            <owl-date-time #dt1 [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <div class="text-danger" *ngIf="filterToDateError">
+            {{filterToDateErrorMessage}}
+          </div>
         </div>
       </div>
-      <div class="form-group">
-        <label>End Date</label>
-        <div class="position-relative">
-          <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filtershiftenddate">
-          <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
-            <i class="fa fa-calendar"></i>
-          </span>
-          <owl-date-time #dt1 [pickerType]="'calendar'"></owl-date-time>
-        </div>
+      <!--[ngClass]="filterClass"-->
+      <div class="filter-footer">
+        <ul class="nav">
+          <li class="nav-item width33" title="Search">
+            <button class="btn-footer-fill btn-block rounded-0 height100" [disabled]="filterToDateError || filterFromDateError" (click)="searchScheduleRecordFilter('search')">
+              <span class="fa fa-check"></span>
+            </button>
+          </li>
+          <li class="nav-item width33" title="Reset" (click)="searchScheduleRecordFilter('reset')">
+            <a class="nav-link p-0">
+              <span class="fa fa-refresh"></span>
+            </a>
+          </li>
+          <li class="nav-item width33" title="Close" (click)="closeFilter()">
+            <a class="nav-link p-0">
+              <span class="fa fa-close"></span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-    <!--[ngClass]="filterClass"-->
-    <div class="filter-footer">
-      <ul class="nav">
-        <li class="nav-item width33" title="Search">
-          <a class="nav-link p-0">
-            <span class="fa fa-check"></span>
-          </a>
-        </li>
-        <li class="nav-item width33" title="Reset">
-          <a class="nav-link p-0">
-            <span class="fa fa-refresh"></span>
-          </a>
-        </li>
-        <li class="nav-item width33" title="Close" (click)="closeFilter()">
-          <a class="nav-link p-0">
-            <span class="fa fa-close"></span>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+  </form>
+
 </div>
 
 <div class="overlay" [ngClass]="!isFilter? 'hide':'show'"></div>
