--- a/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
@@ -61,11 +61,11 @@
             <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
-                <button type="button" id="btnViewRole" title="View Asset Library" (click)="navigateToScheduleView(element)"
+                <button type="button" id="btnViewRole" title="View" (click)="navigateToScheduleView(element)"
                         *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))">
                   <span class="fa fa-file-text-o"></span>
                 </button>
-                <button type="button" id="btnUpdateRole" title="Update Asset Library" (click)="navigateToScheduleEdit(element)"
+                <button type="button" id="btnUpdateRole" title="Update" [disabled]="!element.IsActive"  (click)="navigateToScheduleEdit(element)"
                         *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))">
                   <span class="fa fa-pencil-square-o"></span>
                 </button>
