issue resolved related to render engine, page and statement module

--- a/App/ClientApp/src/app/layout/render-engine/addedit/addedit.component.html
+++ b/App/ClientApp/src/app/layout/render-engine/addedit/addedit.component.html
@@ -29,7 +29,7 @@
                     <div class="validation-msg" style="color:red" *ngIf="RenderEngineURL.touched && RenderEngineURL.errors">
                         <ul style="list-style-type:none">
                             <li class="text-danger" *ngIf="RenderEngineURL.errors?.pattern">Invalid Render Engine URL</li>
-                            <li class="text-danger" *ngIf="RenderEngineURL.errors?.required">Render Engine URL name required</li>
+                            <li class="text-danger" *ngIf="RenderEngineURL.errors?.required">Render Engine URL required</li>
                         </ul>
                     </div>
                 </div>
