--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -835,12 +835,12 @@
   }
 
   .example-list {
-    height: 300px;
+    height: auto;
     min-height: 120px;
     border-radius: 4px;
     //overflow: hidden;
     display: block;
-    padding: 10px 10px 0 10px;
+    padding: 10px 10px 1px 10px;
   }
 
   .example-box {
