--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="float-right pr-2 d-md-block d-none">
-    <button class="btn-footer-fill mt-2 mr-2" id="btnPrev" title="Previous" *ngIf="!pageEditModeOn" [disabled]="isMasterSaveBtnDisabled" (click)="prevBtnClicked()"> Prev</button>
+    <button class="btn-footer-fill mt-2 mr-2" id="btnPrev" title="Previous" [disabled]="isMasterSaveBtnDisabled" (click)="prevBtnClicked()"> Prev</button>
     <button class="btn-footer-fill mt-2 mr-2" id="btnSave" title="Save" [disabled]="isMasterSaveBtnDisabled" (click)="OnSaveBtnClicked()"> Save</button>
     <button class="btn-footer-outline mt-2" id="btnCancel" title="Cancel" (click)="backClicked()"> Cancel </button>
   </div>
