--- a/App/ClientApp/src/app/layout/users/view/view.component.html
+++ b/App/ClientApp/src/app/layout/users/view/view.component.html
@@ -60,7 +60,7 @@
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2" id="btnSave" *ngIf="userRecord.IsActive" (click)="editUser()">Update</button>
+      <button class="btn-footer-fill mr-2" id="btnSave" *ngIf="userRecord.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Edit' }))" (click)="editUser()">Update</button>
       <!--<button class="btn-footer-fill-delete bg-danger mr-2" (click)="deleteUser()" id="btnDelete">Delete</button>-->
       <button class="btn-footer-outline" id="btnCancel" (click)="backClicked()">Cancel</button>
     </div>
