--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -10,9 +10,9 @@
 
   <ul class='nav nav-toolbar float-right' [ngClass]="isTopbarShow? 'show':'hide'">
     <li class="nav-item">
-      <a class="nav-link top-nav-link" id="settingsSideBar"  (click)="ChangeSideBar()">
+      <a class="nav-link top-nav-link" id="settingsSideBar" (click)="ChangeSideBar()">
         <span></span>
-        <i class="fa fa-cog" ></i>
+        <i class="fa fa-cog"></i>
       </a>
     </li>
     <li class="nav-item dropdown float-right">
@@ -33,10 +33,10 @@
   <!--mobile end-->
   <ul class='nav nav-toolbar float-right show-toolbar'>
     <li class="nav-item" *ngIf="isSuperAdminUser">
-      <a class="nav-link top-nav-link" id="settingsSideBar"  (click)="ChangeSideBar()">
+      <a class="nav-link top-nav-link" id="settingsSideBar" (click)="ChangeSideBar()">
         <span></span>
-        <i id ="HomeSettingIcon" *ngIf="!IsMainMenu" class="fa fa-home" title="Home"></i>
-        <i id ="HomeSettingIcon" *ngIf="IsMainMenu" class="fa fa-cog" title="Setings"></i>
+        <i id="HomeSettingIcon" *ngIf="!IsMainMenu" class="fa fa-home" title="Home"></i>
+        <i id="HomeSettingIcon" *ngIf="IsMainMenu" class="fa fa-cog" title="Setings"></i>
       </a>
     </li>
     <li class="nav-item dropdown">
@@ -56,8 +56,8 @@
 <div class="side-bar-container" [ngClass]="sidebar_class">
   <div class="side-bar-nav stylescrollbar">
     <ul class='side-bar-ul'>
-
-      <li [ngClass]="(URL=='/dashboard')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToDashoard()" *ngIf="IsMainMenu">
+      <li [ngClass]="(URL=='/dashboard')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToDashoard()"
+          *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dashboard','Operation' : 'View'}))">
         <a> <span class='nav-icon icon-machine-dashboard2' title="Dashboard"> </span><span class='nav-title'>Dashboard</span></a>
       </li>
 
@@ -77,17 +77,17 @@
       </li>
 
       <li [ngClass]="(URL=='/widgets')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToWidgets()"
-          *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Widgets','Operation' : 'View'}))">
+          *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Widget','Operation' : 'View'}))">
         <a> <span class='nav-icon icon-line-dashboard2' title="Widgets"></span><span class='nav-title'>Widgets</span>  </a>
       </li>
 
       <li [ngClass]="(URL=='/pages')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToTemplates()"
-          *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Pages','Operation' : 'View'}))">
+          *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Page','Operation' : 'View'}))">
         <a> <span class='nav-icon icon-templates2' title="Pages"></span><span class='nav-title'>Pages</span>  </a>
       </li>
 
       <li [ngClass]="(URL=='/statementdefination')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToStatementDef()"
-          *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions','Operation' : 'View'}))">
+          *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definition','Operation' : 'View'}))">
         <a> <span class='nav-icon icon-statemenrDefinitions' title="Statement Definitions"> </span> <span class='nav-title'>Statement Definitions</span> </a>
       </li>
 
@@ -96,16 +96,14 @@
         <a> <span class='nav-icon icon-production-plan-line2' title="Schedule Management"> </span> <span class='nav-title'>Schedule Management</span> </a>
       </li>
 
-      <li [ngClass]="(URL=='/logs')?'side-bar-li active-li':'side-bar-li'" *ngIf="IsMainMenu" (click)="navigateToLogs()">
+      <li [ngClass]="(URL=='/logs')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToLogs()"
+          *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Log','Operation' : 'View'}))">
         <a> <span class='nav-icon icon-reportGenerations2' title="Logs"> </span> <span class='nav-title'>Logs</span> </a>
       </li>
 
-      <li [ngClass]="(URL=='/analytics')?'side-bar-li active-li':'side-bar-li'" *ngIf="IsMainMenu" (click)="navigateToAnalytics()">
+      <li [ngClass]="(URL=='/analytics')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToAnalytics()"
+          *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Analytics','Operation' : 'View'}))">
         <a> <span class='nav-icon icon-rp-yield1' title="Analytics"> </span> <span class='nav-title'>Analytics</span> </a>
-      </li>
-
-      <li [ngClass]="(URL=='/statemenetsearch')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToStatemenetSearch()">
-        <a> <span class='nav-icon fa fa-search' title="Statemenet Search"> </span> <span class='nav-title'>Statemenet Search</span> </a>
       </li>
 
       <li [ngClass]="(URL=='/settings')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isSuperAdminUser" (click)="navigateToSettings()">
@@ -118,6 +116,9 @@
         <a> <span class='nav-icon icon-reportGenerations2' title="Render Engines"> </span> <span class='nav-title'>Render Engines</span> </a>
       </li>
 
+      <li [ngClass]="(URL=='/statemenetsearch')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToStatemenetSearch()">
+        <a> <span class='nav-icon fa fa-search' title="Statemenet Search"> </span> <span class='nav-title'>Statemenet Search</span> </a>
+      </li>
     </ul>
 
   </div>
