--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -835,7 +835,7 @@
   }
 
   .example-list {
-    height: auto;
+    height: 310px;
     min-height: 120px;
     border-radius: 4px;
     //overflow: hidden;
