--- a/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
@@ -121,8 +121,8 @@
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2" id="btnSave" (click)="navigateToAssetLibraryEdit()">Update</button>
-      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="deleteAssetLibrary()">Delete</button>
+      <button class="btn-footer-fill mr-2" id="btnSave"  *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))" (click)="navigateToAssetLibraryEdit()">Update</button>
+      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Delete' }))" (click)="deleteAssetLibrary()">Delete</button>
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
     </div>
   </div>
