--- a/App/ClientApp/src/app/layout/template/list/list.component.html
+++ b/App/ClientApp/src/app/layout/template/list/list.component.html
@@ -128,7 +128,7 @@
           <label>Page Type</label>
           <select formControlName="filterPageType" (change)="onPageTypeSelected($event)" class="form-control">
             <option value="0" selected> Select</option>
-            <option *ngFor="let pageType of pageTypeList" [value]="pageType.Id">{{pageType.Name}}</option>
+            <option *ngFor="let pt of pageTypeList" [value]="pt.Identifier">{{pt.PageTypeName}}</option>
           </select>
         </div>
         <div class="form-group">
