Minor issue resolved

--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -838,7 +838,7 @@
     height: 310px;
     min-height: 120px;
     border-radius: 4px;
-    //overflow: hidden;
+    overflow: auto;
     display: block;
     padding: 10px 10px 1px 10px;
   }
