--- a/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
@@ -33,7 +33,7 @@
 
           <!-- Name Column -->
           <ng-container matColumnDef="schedule">
-            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Defination </th>
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Definition </th>
             <td mat-cell *matCellDef="let element"> {{element.Statement.Name}} </td>
           </ng-container>
 
@@ -99,7 +99,7 @@
           <input type="text" class="form-control" formControlName="filterDisplayName">
         </div>
         <div class="form-group">
-          <label>Statement Defination</label>
+          <label>Statement Definition</label>
           <input type="text" class="form-control" formControlName="filterStatementDefiniton">
         </div>
         <div class="form-group">
