--- a/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
@@ -24,7 +24,7 @@
             <td mat-cell *matCellDef="let element">{{element.Schedule.Name}}</td>
           </ng-container>
           <ng-container matColumnDef="template">
-            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Defination </th>
+            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Definition </th>
             <td mat-cell *matCellDef="let element"> {{element.Schedule.Statement.Name}} </td>
           </ng-container>
 
@@ -83,7 +83,7 @@
           <input type="text" class="form-control" formControlName="filterDisplayName">
         </div>
         <div class="form-group">
-          <label>Statement Defination</label>
+          <label>Statement Definition</label>
           <input type="text" class="form-control" formControlName="filterStatementDefiniton">
         </div>
         <div class="form-group">
