--- a/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
@@ -10,7 +10,7 @@
           <div>{{schedule.Name}}</div>
         </div>
         <div class="col-md-4 col-lg-4">
-          <label id="lblTemplate" for="inputRoleName">Statement Defination</label>
+          <label id="lblTemplate" for="inputRoleName">Statement Definition</label>
           <div>{{schedule.Statement.Name}}</div>
         </div>
       </div>
