basic statement generation as html files process added

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -30,7 +30,18 @@
                   'fa-address-card-o' : widget.WidgetName == 'AccountInformation',
                   'fa-image fa-lg' : widget.WidgetName == 'Image',
                   'icon-videoWidget' : widget.WidgetName == 'Video',
-                  'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary'
+                  'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary',
+                  'fa-bell-o fa-lg' : widget.WidgetName == 'ReminderAndRecommendation',
+                  'icon-rp-loss1 fa-lg' : widget.WidgetName == 'InvestmentPortfolioRisk',
+                  'icon-AnalyticsWidget' : widget.WidgetName == 'Analytics',
+                  'icon-AvailableBalanceWidget' : widget.WidgetName == 'SavingAvailableBalance' || widget.WidgetName == 'CurrentAvailableBalance',
+                  'icon-widget-multi-column2' : widget.WidgetName == 'SavingTransaction',
+                  'icon-widget-line-chart2' : widget.WidgetName == 'SavingTrend',
+                  'icon-TransactionMixWidget' : widget.WidgetName == 'TransactionMix',
+                  'icon-rp-production1' : widget.WidgetName == 'SpendingTrend',
+                  'fa-newspaper-o' : widget.WidgetName == 'NewsAlerts',
+                  'fa-credit-card' : widget.WidgetName == 'CurrentTransaction',
+                  'icon-rp-quality1' : widget.WidgetName == 'Top4IncomeSources'
               }">
           </span><span class="nav-title"> {{widget.DisplayName}} </span>
           </a>
